Fix visible border edga for active tab

--- a/themes/bodensee/less/bsz/header.less
+++ b/themes/bodensee/less/bsz/header.less
@@ -106,9 +106,9 @@ header .nav-tabs {
 
 }
 .nav-tabs > li.active a:hover, .nav-tabs > li.active a {
-    border-top: 1px solid @brand-primary;
-    border-left: 1px solid @brand-primary;
-    border-right: 1px solid @brand-primary;
+    border-top: 1px solid @navbar-default-border;
+    border-left: 1px solid @navbar-default-border;
+    border-right: 1px solid @navbar-default-border;
 }
 
 .nav-tabs > li:not(.active) > a:hover {
