--- a/themes/bodensee/less/bsz/variables/elk-wue.less
+++ b/themes/bodensee/less/bsz/variables/elk-wue.less
@@ -366,7 +366,7 @@
 
 @navbar-default-color:             @brand-primary;
 @navbar-default-bg:                @brand-primary;
-@navbar-default-border:            @navbar-default-bg;
+@navbar-default-border:            white;
 
 // Navbar links
 @navbar-default-link-color:                #fff;
